# websocketpp-to-boost-beast

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/src/: main.cpp
include/: BeastConnection.hpp  BeastServer.hpp
include/Mockables/: IWebSocketConnection.h  IWebSocketServer.h
tests/: CMakeLists.txt
tests/src/: WebSocketTest.cpp
tests/src/Mocked/: MockedConnection.h
